# Pruvulazzu

./: CMakeLists.txt  README.md
src/: PluginEditor.cxx  PluginEditor.hxx  PluginProcessor.cxx  PluginProcessor.hxx
src/DSP/: FileLoader.hxx  Grain.hxx  GrainEngine.hxx
src/UI/: WaveformComponent.hxx
tests/: DSPTests.cxx
